Fixed spacing around p tags

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -86,3 +86,7 @@ td {
   margin-left: auto;
   margin-right: auto;
 }
+
+.driver-p {
+  margin: 0.3rem 0;
+}
